--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FlashCardProject"
         tools:targetApi="31">
+
+        <!-- SplashActivity as the launcher activity -->
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- MainActivity, which will be launched after the splash screen -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
+        <activity android:name=".FlashCardDetailActivity"></activity>
+
+
     </application>
 
 </manifest>
